<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="cargo_app_name" tools:ignore="ResourceName">加油商品</string>

    <string name="cargo_tv_provider">
        <font color='#f3362b'>*</font>提供商
    </string>
    <string name="cargo_tv_97_provider">畅通9.7折油卡充值
    </string>
    <string name="cargo_tv_oil_card_number">
        <font color='#f3362b'>*</font>油卡号
    </string>
    <string name="cargo_oil_card_97">
        <font color='#f3362b'>*</font>畅通9.7折油卡号
    </string>
    <string name="cargo_oil_97_gou_card">
        若无9.7折油卡,请先购卡>
    </string>
    <!--<string name="cargo_tv_oil_tip">-->
    <!--<font color='#f3362b'>*请填写正确的油卡卡号，错充金额将无法退还</font>-->
    <!--</string>-->
    <string name="cargo_tv_oil_tip">
        <font color='#f3362b'>*9.7折优惠 需购卡才可享受</font>
    </string>
    <string name="cargo_tv_oil_97_tip">
        <font color='#f3362b'>*请填写正确的油卡卡号,错充金额无法退还</font>
    </string>

    <string name="cargo_bid_oil_tip">畅通9.7折油卡由中石化官方发行，可在全国<font color='#f3362b'>中石化加油站</font>使用.\n
        1、畅通油卡由中石化官方发行，仅支持工行卡在畅通车友会APP在线充值享<font color='#f3362b'>9.7折</font>，其他渠道不能充值;\n
        2、每月15号，30号开放两次充值服务，可提前支付下单，自动于15号，30号当天充值到账;\n
        3、充值成功后，需加油站圈存后方可使用，详询加油站工作人员;\n
        4、目前黑吉辽、陕甘宁、新疆、内蒙、西藏、青海省不支持当地圈存，可在外省圈存后在以上城市使用加油;\n
        5、本服务为全国加油卡代充，顾不支持开具发票;\n
        6、本服务由畅通车友会加油服务商提供;
    </string>
    <!--    6、本服务由畅通车友会加油服务商提供，如有问题请致电4008216158;-->
    <string name="cargo_bid_oil_card">
        购买加油卡用户可在下次充值时享受9.7折优惠\n暂只支持工行卡支付，若无工行卡，请<font color='#f3362b'>申办工行畅通卡</font>
    </string>
    <string name="cargo_tv_97_date">*油卡将在7个工作日内寄出，如有疑问，请咨询客服</string>
    <string name="cargo_tv_license_num">
            <font color='#f3362b'>*</font>驾驶证号
    </string>
    <string name="cargo_tv_serial">
            <font color='#f3362b'>*</font>驾驶证档案编号
    </string>
    <string name="cargo_tv_vertical">
           <font color='#f3362b'>*</font>验证码
    </string>
    <string name="cargo_license_score_tip">
        驾驶证查分功能非实时生效,详情以上海市公安交通管理部门发布的消息为准\r\n
        若无法收到验证码,请点击<font color='#33b5e5'>此处</font>进行查询
    </string>
    <string name="cargo_tv_inquiry">(<i>点击查询</i>)</string>
</resources>
