<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_80" />

    <!--提供商-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_80"
        android:layout_marginTop="@dimen/pt_20"
        android:background="@drawable/sel_item_solid_gray"
        android:paddingLeft="@dimen/pt_30"
        android:paddingRight="@dimen/pt_30">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@mipmap/ic_oil_zhongshihua"
            android:drawablePadding="@dimen/pt_20"
            android:text="@string/cargo_tv_97_provider"
            android:textColor="@color/res_color_red_f3"
            android:textSize="@dimen/pt_26" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_1"
        android:layout_marginLeft="@dimen/pt_30"
        android:background="@color/res_color_gray_e6" />

    <LinearLayout
        android:id="@+id/lay_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_80"
        android:background="@color/res_color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/pt_30"
        android:paddingRight="@dimen/pt_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo_oil_card_97"
            android:textColor="@color/res_color_black_4d"
            android:textSize="@dimen/pt_28" />

        <EditText
            android:id="@+id/edit_oil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="请输入19位加油卡号"
            android:inputType="number"
            android:maxEms="19"
            android:maxLength="19"
            android:maxLines="1"
            android:minWidth="@dimen/pt_120"
            android:textColor="@color/res_color_black_4d"
            android:textColorHint="@color/res_color_gray_e6"
            android:textSize="@dimen/pt_30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_1"
        android:layout_marginLeft="@dimen/pt_30"
        android:background="@color/res_color_gray_e6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_80"
        android:background="@color/res_color_white"
        android:paddingLeft="@dimen/pt_30"
        android:paddingRight="@dimen/pt_30">

        <TextView
            android:id="@+id/tv_gou_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/cargo_oil_97_gou_card"
            android:textColor="@color/res_color_blue_0b"
            android:textSize="@dimen/pt_26" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/res_color_white"
        android:gravity="left"
        android:paddingLeft="@dimen/pt_30"
        android:paddingRight="@dimen/pt_30"
        android:text="@string/cargo_tv_oil_97_tip"
        android:textColor="@color/res_color_red_f3"
        android:textSize="@dimen/pt_20" />

    <LinearLayout
        android:id="@+id/lay_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pt_20"
        android:background="@color/res_color_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pt_80"
            android:layout_marginLeft="@dimen/pt_30"
            android:gravity="center_vertical"
            android:text="充值金额"
            android:textColor="@color/res_color_black_4d"
            android:textSize="@dimen/pt_26" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/pt_15"
            android:paddingRight="@dimen/pt_15" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pt_120"
        android:background="@color/res_color_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pt_80"
            android:layout_marginLeft="@dimen/pt_30"
            android:gravity="center_vertical"
            android:text="畅通9.7折联名卡使用说明"
            android:textColor="@color/res_color_black_4d"
            android:textSize="@dimen/pt_26" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pt_30"
            android:layout_marginRight="@dimen/pt_30"
            android:textSize="@dimen/pt_24"
            tools:text="jfsfosjffjsfjsijsdjs" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="@dimen/pt_30"
            android:drawableLeft="@mipmap/btn_tick_on"
            android:text="我已阅读用户充值协议"
            android:textColor="@color/res_color_blue_0b"
            android:textSize="@dimen/pt_20" />
    </LinearLayout>
</LinearLayout>
